[gd_scene load_steps=41 format=3 uid="uid://dsbr2hrptjhy7"]

[ext_resource type="Script" path="res://entities/enemies/skeletons2.gd" id="1_1hvrq"]
[ext_resource type="Texture2D" uid="uid://cpiuno5ill17m" path="res://images/Monsters_Creatures_Fantasy/Skeleton/Death.png" id="1_oruq3"]
[ext_resource type="Texture2D" uid="uid://b1o3vnb2xhl41" path="res://images/Monsters_Creatures_Fantasy/Skeleton/Idle.png" id="2_8nkmr"]
[ext_resource type="Texture2D" uid="uid://bwpabldh1dsr8" path="res://images/Monsters_Creatures_Fantasy/Skeleton/Shield.png" id="3_1vun8"]
[ext_resource type="Texture2D" uid="uid://djc1lq6ch43dk" path="res://images/Monsters_Creatures_Fantasy/Skeleton/Take Hit.png" id="4_raft1"]
[ext_resource type="Texture2D" uid="uid://bh5vn81dl6g" path="res://images/Monsters_Creatures_Fantasy/Skeleton/Walk.png" id="5_b8jp4"]
[ext_resource type="Texture2D" uid="uid://8trj5w4xv2bq" path="res://images/Monsters_Creatures_Fantasy/Skeleton/Attack.png" id="6_ew148"]

[sub_resource type="AtlasTexture" id="AtlasTexture_un4hw"]
atlas = ExtResource("6_ew148")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vh3et"]
atlas = ExtResource("6_ew148")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_r81hh"]
atlas = ExtResource("6_ew148")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhr1t"]
atlas = ExtResource("6_ew148")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuehf"]
atlas = ExtResource("6_ew148")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ninmt"]
atlas = ExtResource("6_ew148")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6geu7"]
atlas = ExtResource("6_ew148")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gn16p"]
atlas = ExtResource("6_ew148")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8fft"]
atlas = ExtResource("1_oruq3")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnsp4"]
atlas = ExtResource("1_oruq3")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_sok2y"]
atlas = ExtResource("1_oruq3")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuos4"]
atlas = ExtResource("1_oruq3")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lj8b"]
atlas = ExtResource("2_8nkmr")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dox6h"]
atlas = ExtResource("2_8nkmr")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8g1kv"]
atlas = ExtResource("2_8nkmr")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_c113d"]
atlas = ExtResource("2_8nkmr")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w6nd"]
atlas = ExtResource("3_1vun8")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruvqw"]
atlas = ExtResource("3_1vun8")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nksw"]
atlas = ExtResource("3_1vun8")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mkp1"]
atlas = ExtResource("3_1vun8")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_174ct"]
atlas = ExtResource("4_raft1")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xeccp"]
atlas = ExtResource("4_raft1")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7jcq"]
atlas = ExtResource("4_raft1")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2k3cn"]
atlas = ExtResource("4_raft1")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvqjx"]
atlas = ExtResource("5_b8jp4")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_iakvm"]
atlas = ExtResource("5_b8jp4")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pthfw"]
atlas = ExtResource("5_b8jp4")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_o038q"]
atlas = ExtResource("5_b8jp4")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_70asj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_un4hw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vh3et")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r81hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhr1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuehf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ninmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6geu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gn16p")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8fft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnsp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sok2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuos4")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lj8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dox6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8g1kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c113d")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w6nd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruvqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nksw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mkp1")
}],
"loop": false,
"name": &"shield",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_174ct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xeccp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7jcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2k3cn")
}],
"loop": false,
"name": &"takeHit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvqjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iakvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pthfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o038q")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n7owu"]
height = 50.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_16rcb"]
size = Vector2(533.375, 276.75)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ogx1u"]
radius = 20.0
height = 70.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sw6ra"]
size = Vector2(140, 40)

[node name="CharacterBody2D" type="CharacterBody2D"]
scale = Vector2(1.2, 1.2)
collision_layer = 4
collision_mask = 7
script = ExtResource("1_1hvrq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_70asj")
animation = &"idle"
frame = 3
frame_progress = 0.490977

[node name="character_collision" type="CollisionShape2D" parent="."]
position = Vector2(2, 4)
shape = SubResource("CapsuleShape2D_n7owu")

[node name="visionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="visionArea"]
position = Vector2(0.0208409, 0)
shape = SubResource("RectangleShape2D_16rcb")
debug_color = Color(0, 0.6, 0.701961, 0.0862745)

[node name="hitArea" type="Area2D" parent="."]
collision_layer = 0

[node name="hitArea_collisionShape" type="CollisionShape2D" parent="hitArea"]
position = Vector2(35.833, -4.167)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ogx1u")
disabled = true
debug_color = Color(0.968627, 0, 0, 0.309804)

[node name="attackArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackArea"]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_sw6ra")
debug_color = Color(0.988235, 0, 0, 0.117647)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="visionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="body_exited" from="visionArea" to="." method="_on_vision_area_body_exited"]
[connection signal="body_entered" from="hitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="body_entered" from="attackArea" to="." method="_on_attack_area_body_entered"]
